2004-08-05  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: (backport) fix XCode 1.5 cctools version detection

2004-07-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: more modularization, to allow inject.pl in 10.3 
	directory to call some modules; eliminate local/bootstrap; injected 
	packages now go into local/injected
	* Config.pm: new function write_sources_list which writes an 
	appropriate file $basepath/etc/apt/sources.list .  (Called 
	automatically by $config->save().); move the hook to old pre-10.2 
	debs from postinstall script to Config.pm; allow local modifications 
	at both the top and bottom of the sources.list file, and preserve 
	them when the file is re-generated
	* FinkVersion.pm.in: the VERSION file and the stamp-* files will 
	now live in /sw/fink/dists, not /sw/fink
	* SelfUpdate.pm: manipulate stamp-* files in new location; rsync must 
	include DISTRIBUTION and README files; change the VERSION when
	rsyncing to reflect rsync; store the website and cvs-repository 
	addresses in /sw/lib/fink/URL via the fink-mirrors package, and use
	the addresses stored there rather than hard-wired ones
	
2004-07-07  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Backported get_configureparams() accessor (needed
	by get_*script() methods).

2004-07-06  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Implement %default_script for all *Script fields.

2004-07-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Allow bootstrapping with perl 5.8.2 and perl 5.8.4.
	
2004-07-02  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Add checksum argument to fetch_url_to_file; if it
	doesn't match, consider download a failure and continue through
	mirror list.
	* PkgVersion.pm: Pass $checksum to fetch_url_to_file in phase_fetch.

2004-06-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Validation.pm: One more tweak to BuildDependsOnly: